# ray-tracer

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: color.rs  hittable.rs  lib.rs  main.rs  point3.rs  ppm.rs  ray.rs  sphere.rs  vec3.rs
src/core/: camera.rs  color.rs  interval.rs  mod.rs  ppm.rs  progress.rs  rand.rs
src/geo/: core.rs  hittable.rs  interval.rs  material.rs  mod.rs  point3.rs  ray.rs  sphere.rs  vec3.rs
src/test/: assert.rs
